...
  ]);

  return (
    <KeyboardAwareScrollView
      style={styles.container}
      keyboardShouldPersistTaps="always"
      testID="setup-intent-scroll-view"
    >
      {discoveryMethod === 'internet' && (
        <List bolded={false} topSpacing={false} title="TRANSACTION FEATURES">
          <ListItem
            title="Customer cancellation"
            rightElement={
...
          />
        </List>
      )}
      <List bolded={false} topSpacing={false} title=" ">
        <ListItem
          color={colors.blue}
          title="Collect setupIntent"
          onPress={_createSetupIntent}
        />
      </List>
    </KeyboardAwareScrollView>
  );
}
...
