...
      );
    },
    onDidSucceedReaderReconnect() {
      console.log('onDidSucceedReaderReconnect');
      Alert.alert('Reconnected!', 'We were able to reconnect to the reader.', [
        {
          text: 'OK',
        },
      ]);
    },
    onDidFailReaderReconnect() {
      Alert.alert('Reader Disconnected', 'Reader reconnection failed!', [
        {
...
      </List>
    </>
  );
  return (
    <React.Fragment>
      <KeyboardAwareScrollView
        testID="home-screen"
        style={styles.container}
        contentInsetAdjustmentBehavior="automatic"
      >
        <View style={styles.accountContainer}>
          <Text style={styles.readerName}>
            {account?.settings?.dashboard?.display_name} ({account?.id})
...
